@@ -7,7 +7,12 @@ struct InputOptions
     float mouseSensitivity = 25.f;
     float turnSpeed = 1.f;
     float gamepadDeadzone = 0.05f;
+    float cursorSensitivity = 2.5f;
 };
 
 NLOHMANN_DEFINE_TYPE_NON_INTRUSIVE(
-    InputOptions, mouseSensitivity, turnSpeed, gamepadDeadzone);
+    InputOptions,
+    mouseSensitivity,
+    turnSpeed,
+    gamepadDeadzone,
+    cursorSensitivity);
